--- a/map.html
+++ b/map.html
@@ -16,12 +16,12 @@
             <button class="navbar-toggler" type="button" onclick="toggleNav()">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="btn btn-dark ms-auto" href="#">路線資料</a>
+            <a class="btn btn-dark ms-auto" href="routeif.html">路線資料</a>
         </div>
     </nav>
 
     <!-- 導覽頁（漢堡選單展開時顯示的綠色區域） -->
-    <div id="navPanel" class="nav-panel">
+    <div id="navbar" class="nav-panel">
         <ul class="list-unstyled p-4">
             <li class="mb-3">
                 <a href="map.html" class="text-dark">地圖</a> <!-- 指向地圖頁面 -->
@@ -75,11 +75,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
     <!-- 漢堡選單顯示/隱藏功能 -->
-    <script>
-        function toggleNav() {
-            var navPanel = document.getElementById('navPanel');
-            navPanel.classList.toggle('show-nav');
-        }
-    </script>
+    <script src="./javascrips/navbar.js"></script>
 </body>
 </html>
