--- a/routeif.html
+++ b/routeif.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Go Mountain</title>
 <link rel="stylesheet" href="./css/routeif.css">
+<link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <div class="menu-toggle" id="mobile-menu">
@@ -40,5 +41,6 @@
 });
 
 </script>
+<script src="./js/sw-register.js"></script>
 </body>
 </html>
