--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入頁面</title>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="./css/login.css">
 </head>
 <body>
@@ -17,5 +18,6 @@
             <button type="submit">登入</button>
         </form>
     </div>
+    <script src="./js/sw-register.js"></script>
 </body>
 </html>
