--- a/map.html
+++ b/map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>地圖</title>
+    <link rel="manifest" href="/manifest.json">
     <!-- 引入 Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 自訂的CSS檔案 -->
@@ -76,5 +77,7 @@
 
     <!-- 漢堡選單顯示/隱藏功能 -->
     <script src="./javascrips/navbar.js"></script>
+    <script src="./js/sw-register.js"></script>
+
 </body>
 </html>
