--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>註冊頁面</title>
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="./css/register.css">
 </head>
 <body>
@@ -37,5 +38,6 @@
             // 在此處添加真實的 Google 登入邏輯或重定向
         }
     </script>
+    <script src="./js/sw-register.js"></script>
 </body>
 </html>
