--- a/weather.html
+++ b/weather.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>天氣</title>
+    <link rel="manifest" href="/manifest.json">
     <!-- 引入 Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 引入外部CSS -->
@@ -57,5 +58,6 @@
             navPanel.classList.toggle('show-nav');
         }
     </script>
+    <script src="./js/sw-register.js"></script>
 </body>
 </html>
