--- a/ws.html
+++ b/ws.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>水源資訊</title>
+    <link rel="manifest" href="/manifest.json">
     <!-- 引入 Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- 自訂CSS -->
@@ -83,5 +84,7 @@
             renderWaterSources(waterData);
         };
     </script>
+    <script src="./js/sw-register.js"></script>
+
 </body>
 </html>
