--- a/login.html
+++ b/login.html
@@ -18,6 +18,6 @@
             <button type="submit">登入</button>
         </form>
     </div>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 </body>
 </html>
