--- a/map.html
+++ b/map.html
@@ -77,7 +77,7 @@
 
     <!-- 漢堡選單顯示/隱藏功能 -->
     <script src="./javascrips/navbar.js"></script>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 
 </body>
 </html>
