--- a/register.html
+++ b/register.html
@@ -38,6 +38,6 @@
             // 在此處添加真實的 Google 登入邏輯或重定向
         }
     </script>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 </body>
 </html>
