--- a/routeif.html
+++ b/routeif.html
@@ -41,6 +41,6 @@
 });
 
 </script>
-<script src="./js/sw-register.js"></script>
+<script src="./javascrips/sw-register.js"></script>
 </body>
 </html>
