--- a/weather.html
+++ b/weather.html
@@ -58,6 +58,6 @@
             navPanel.classList.toggle('show-nav');
         }
     </script>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 </body>
 </html>
