--- a/ws.html
+++ b/ws.html
@@ -84,7 +84,7 @@
             renderWaterSources(waterData);
         };
     </script>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 
 </body>
 </html>
