--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     <!-- 引入 Bootstrap JS 和 Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
-    <script src="./js/sw-register.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
 </body>
 </html>
