--- a/map.html
+++ b/map.html
@@ -78,6 +78,7 @@
     <!-- 漢堡選單顯示/隱藏功能 -->
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
+    <script src="./db/gomtdb.js"></script>
 
 </body>
 </html>
