--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
     <link rel="manifest" href="/manifest.json">
     <!-- 引入 Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- 自訂的CSS檔案 -->
+    <!-- 自訂的 CSS 檔案 -->
     <link rel="stylesheet" href="./css/map.css">
 </head>
 <body>
@@ -51,10 +51,9 @@
             </select>
         </div>
 
-        <!-- API 預留框 -->
-        <div class="api-content border border-dark mb-4" style="height: 300px;">
-            <!-- 這裡將用於 API 資料顯示 -->
-            <p class="text-muted pt-5">API 資料顯示區</p>
+        <!-- Google 地圖顯示區 -->
+        <div id="map" class="api-content border border-dark mb-4" style="height: 300px;">
+            <!-- 地圖將在此顯示 -->
         </div>
 
         <!-- 路線數據 -->
@@ -75,10 +74,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
-    <!-- 漢堡選單顯示/隱藏功能 -->
-    <script src="./javascrips/navbar.js"></script>
-    <script src="./javascrips/sw-register.js"></script>
-    <script src="./db/gomtdb.js"></script>
+    <!-- 引入自訂的 JavaScript 檔案 -->
+    <script src="./javascripts/navbar.js"></script>
+    <script src="./javascripts/sw-register.js"></script>
+    <script src="./db/gomtDB.js"></script>
+    <script src="./javascrips/map_api.js"></script>
 
+    <!-- 引入 Google Maps API -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCzF2kWG5vYsqJVppaPbMHwm23yU4sxwzY&callback=initMap"></script>
 </body>
 </html>
