--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid d-flex flex-column justify-content-center align-items-center vh-100">
         <!-- Logo -->
-        <img src="./images/資產 2.png" alt="Logo" class="logo mb-4">
+        <img src="./images/logo-2.png" alt="Logo" class="logo mb-4">
         
         <!-- Text -->
         <div class="text-center mb-4">
