--- a/map.html
+++ b/map.html
@@ -47,7 +47,8 @@
 
         <!-- 日期選擇條 -->
         <div class="date-bar bg-dark text-white py-2 mb-4">
-            <span>2024-08-20的路線</span>
+            <label for="routeDate" class="me-2">選擇路線日期:</label>
+    <input type="date" id="routeDate" class="form-select d-inline w-auto ms-2" aria-label="選擇日期">
             <select class="form-select d-inline w-auto ms-2" aria-label="選擇路線">
                 <option selected>選擇路線</option>
                 <option value="1">路線 1</option>
