--- a/map.html
+++ b/map.html
@@ -48,7 +48,7 @@
         <!-- 日期選擇條 -->
         <div class="date-bar bg-dark text-white py-2 mb-4">
             <label for="routeDate" class="me-2">選擇路線日期:</label>
-    <input type="date" id="routeDate" class="form-select d-inline w-auto ms-2" aria-label="選擇日期">
+            <input type="date" id="routeDate" class="form-select d-inline w-auto ms-2" aria-label="選擇日期">
             <select class="form-select d-inline w-auto ms-2" aria-label="選擇路線">
                 <option selected>選擇路線</option>
                 <option value="1">路線 1</option>
@@ -65,12 +65,12 @@
         <!-- 路線數據 -->
         <div class="route-info bg-light py-3">
             <div class="d-flex justify-content-around">
-                <div><strong>預估時間</strong><br><span id="time">00:00:00</span></div>
-                <div><strong>總距離</strong><br><span id="distance">0KM</span></div>
-                <div><strong>總爬升</strong><br><span id="elevationGain">0M</span></div>
-                <div><strong>總下降</strong><br><span id="elevationLoss">0M</span></div>
+                <div><strong>時間</strong><br><span id="time">00:00:00</span></div>
+                <div><strong>總距離</strong><br><span id="distance">0.00 KM</span></div>
+                <div><strong>目前高度</strong><br><span id="currentAltitude">0 M</span></div> <!-- 目前高度 -->
             </div>
         </div>
+        
 
 
 
