--- a/map.html
+++ b/map.html
@@ -18,8 +18,8 @@
     <!-- 引入 Leaflet.js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- 引入自訂的 JavaScript 檔案 -->
-    <script src="./javascripts/navbar.js"></script>
-    <script src="./javascripts/sw-register.js"></script>
+    <script src="./javascrips/navbar.js"></script>
+    <script src="./javascrips/sw-register.js"></script>
     <script src="./javascrips/leaflet-map.js"></script>
     <script src="./db/gomtDB.js"></script>
 </head>
@@ -74,7 +74,7 @@
             <div class="d-flex justify-content-around">
                 <div><strong>預估時間</strong><br><span id="time">00:00:00</span></div>
                 <div><strong>總距離</strong><br><span id="distance">0 KM</span></div>
-                <div><strong>目前高度</strong><br><span id="currentAltitude">0 M</span></div>
+                <div><strong>目前高度</strong><br><span id="elevation">0 M</span></div>
             </div>
         </div>
 
