--- a/map.html
+++ b/map.html
@@ -17,12 +17,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- 引入 Leaflet.js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <!-- 引入自訂的 JavaScript 檔案 -->
+    <!-- 引入 firebase -->
+    <!-- 引入 Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js"></script>
+    <script src="./db/firebase-config.js"></script> <!-- 確保這個在 Firebase SDK 之後 -->
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
     <script src="./javascrips/leaflet-map.js"></script>
     <script src="./db/gomtDB.js"></script>
 </head>
+
 <body>
     <!-- 漢堡選單 -->
     <nav class="navbar bg-body-tertiary fixed-top">
@@ -62,7 +68,7 @@
                 <option value="2">路線 2</option>
             </select>
         </div>
-        
+
 
         <!-- Google 地圖顯示區（Leaflet 地圖將取代此處） -->
         <div id="map" class="api-content border border-dark mb-4" style="height: 500px;">
@@ -81,7 +87,7 @@
         <!-- 按鈕 -->
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
     </div>
-    
+
 </body>
 
 </html>
