--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         
         <!-- Button -->
-        <a href="login.html" class="btn btn-dark btn-lg">Get Started</a>
+        <a href="map.html" class="btn btn-dark btn-lg">Get Started</a>
     </div>
 
     <!-- 引入 Bootstrap JS 和 Popper.js -->
