--- a/map.html
+++ b/map.html
@@ -12,20 +12,11 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- 自訂的 CSS 檔案 -->
     <link rel="stylesheet" href="./css/map.css">
-    <!-- 引入 Bootstrap JS 和 Popper.js -->
-    <!-- 引入 Firebase 核心 SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-    <!-- 引入 Firebase Firestore SDK -->
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-firestore.js"></script>
-    <!-- 引入 Firebase Authentication SDK（如果需要） -->
-    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth.js"></script>
-    <!-- 引入 Firebase 配置 -->
-    <script src="./db/firebase-config.js"></script>
+    <!-- <script src="./db/firebase-config.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- 引入 Leaflet.js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="./db/firebase-config.js"></script>
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
     <script src="./javascrips/leaflet-map.js"></script>
@@ -91,6 +82,7 @@
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
     </div>
 
+    <script type="module" src="./db/firebase-config.js"></script>
 </body>
 
 </html>
