--- a/map.html
+++ b/map.html
@@ -12,14 +12,15 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- 自訂的 CSS 檔案 -->
     <link rel="stylesheet" href="./css/map.css">
-    <!-- <script src="./db/firebase-config.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- 引入 Leaflet.js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
-    <script src="./javascrips/leaflet-map.js"></script>
+    <script type="module" src="./db/firebase-config.js"></script>
+    <script type="module" src="./javascrips/leaflet-map.js"></script>
+    <script type="module" src="./db/firebase-sync.js"></script>
     <script src="./db/gomtDB.js"></script>
 </head>
 
@@ -82,7 +83,7 @@
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
     </div>
 
-    <script type="module" src="./db/firebase-config.js"></script>
+
 </body>
 
 </html>
