--- a/map.html
+++ b/map.html
@@ -19,8 +19,9 @@
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
     <script type="module" src="./db/firebase-config.js"></script>
-    <script type="module" src="./javascrips/leaflet-map.js"></script>
     <script type="module" src="./db/firebase-sync.js"></script>
+    <script type="module" src="./javascrips/leaflet-map.js"></script>
+    
     <script src="./db/gomtDB.js"></script>
 </head>
 
@@ -53,16 +54,7 @@
     <!-- 頁面內容 -->
     <div class="container text-center mt-5 pt-5">
         <!-- 標題 -->
-        <h1 class="mt-3 mb-3 text-success">地圖</h1>
-
-        <!-- 日期選擇條 -->
-        <div class="date-bar bg-dark text-white py-2 mb-4">
-            <select class="form-select d-inline w-auto ms-2" aria-label="選擇路線">
-                <option selected>選擇路線</option>
-                <option value="1">路線 1</option>
-                <option value="2">路線 2</option>
-            </select>
-        </div>
+        <h1 class="mt-3 mb-3 text-success">山林地圖</h1>
 
 
         <!-- Google 地圖顯示區（Leaflet 地圖將取代此處） -->
@@ -81,6 +73,7 @@
 
         <!-- 按鈕 -->
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
+        <button id="startNavigation" class="btn btn-success mt-3">開始導航</button>
     </div>
 
 
