--- a/routeif.html
+++ b/routeif.html
@@ -7,7 +7,11 @@
 <link rel="stylesheet" href="./css/routeif.css">
 <link rel="manifest" href="/manifest.json">
 <script src="./javascrips/navbar.js"></script>
-<script type="module" src="./javascrips/routeif.js"></script> 
+<script type="module" src="./db/firebase-config.js"></script>
+<script type="module" src="./db/firebase-sync.js"></script>
+<script type="module" src="./javascrips/routeif.js"></script> <!-- 引入新的 js 檔案 -->
+
+</body>
 </head>
 <body>
 <div class="menu-toggle" id="mobile-menu">
@@ -20,14 +24,11 @@
     <a href="weather.html">天氣</a>
     <a href="ws.html">水源</a>
 </nav>
-
 <div class="main-content">
     <h1 class="page-title">路線資料</h1>
-    <div id="routeContainer">
-        <!-- 動態加載的資料框會放在這裡 -->
-    </div>
+    <div id="routeContainer"></div> <!-- 顯示儲存的路線資料 -->
+    <div id="routeContainer"></div> <!-- 下載檔案 -->
 </div>
 
 
-</body>
 </html>
