--- a/map.html
+++ b/map.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <!-- 引入 Leaflet.js -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.min.js"></script>
     <script src="./javascrips/navbar.js"></script>
     <script src="./javascrips/sw-register.js"></script>
     <script type="module" src="./db/firebase-config.js"></script>
@@ -73,7 +74,6 @@
 
         <!-- 按鈕 -->
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
-        <button id="startNavigation" class="btn btn-success mt-3">開始導航</button>
     </div>
 
 
