--- a/map.html
+++ b/map.html
@@ -74,6 +74,7 @@
 
         <!-- 按鈕 -->
         <button id="recordButton" class="btn btn-success mt-3">開始記錄</button>
+        <button id="startNavigation" class="btn btn-success  mt-3">開始導航</button>
     </div>
 
 
