--- a/mapdetails.html
+++ b/mapdetails.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>路徑詳細資料</title>
     <link rel="stylesheet" href="./css/map.css">
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.5.1/gpx.min.js"></script>
     <script type="module" src="./javascrips/mapdetails.js"></script> <!-- 將路徑詳細資料 JS 檔案分離 -->
+
 </head>
 <body>
     <div id="map" style="height: 400px;"></div>
