--- a/login.html
+++ b/login.html
@@ -5,19 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入頁面</title>
     <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/login.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./javascrips/login.js"></script>
 </head>
 <body>
-    <div class="login-container">
-        <div class="logo-container">
-            <img src="./images/logo-1.png 5.png" alt="Logo" class="logo">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card mt-5">
+                    <div class="card-body">
+                        <div class="logo-container text-center mb-4">
+                            <img src="./images/logo-1.png" alt="Logo" class="logo img-fluid">
+                        </div>
+                        <form id="loginForm" class="login-form">
+                            <div class="mb-3">
+                                <input type="text" id="username" name="username" class="form-control" placeholder="帳號" required>
+                            </div>
+                            <div class="mb-3">
+                                <input type="password" id="password" name="password" class="form-control" placeholder="密碼" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">登入</button>
+                        </form>
+                        <div id="loginError" class="text-danger mt-3" style="display: none;">帳號或密碼錯誤，請重試。</div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <form action="/submit_login" method="POST" class="login-form">
-            <input type="text" id="username" name="username" placeholder="帳號" required>
-            <input type="password" id="password" name="password" placeholder="密碼" required>
-            <button type="submit">登入</button>
-        </form>
     </div>
-    <script src="./javascrips/sw-register.js"></script>
+   
 </body>
 </html>
