--- a/login.html
+++ b/login.html
@@ -27,6 +27,10 @@
                                 <input type="password" id="password" name="password" class="form-control" placeholder="密碼" required>
                             </div>
                             <button type="submit" class="btn btn-primary w-100">登入</button>
+                            <div class="mb-3">
+                                <a href="./register.html">註冊</a>
+                                <a href="./register.html">忘記密碼</a>
+                            </div>
                         </form>
                         <div id="loginError" class="text-danger mt-3" style="display: none;">帳號或密碼錯誤，請重試。</div>
                     </div>
