--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 id="userName" class="text-center"></h1>
+        <h1 id="usernameDisplay" class="text-center"></h1>
         <div class="route-section mt-4">
             <div class="row">
                 <div class="col-md-6">
