--- a/register.html
+++ b/register.html
@@ -14,24 +14,34 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="text-center">註冊新帳戶</h2>
-        <form action="/submit_registration" method="POST" class="mt-4">
-            <div class="form-group">
-                <label for="name">姓名：</label>
-                <input type="text" class="form-control" id="name" name="name" required>
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <div class="card-header">
+                    <h2 class="text-center">註冊新帳戶</h2>
+                </div>
+                <div class="card-body">
+                    <form id="registerForm">
+                        <div class="form-group">
+                            <label for="username">姓名：</label>
+                            <input type="text" class="form-control" id="username" name="username" placeholder="請輸入您的姓名" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">電子郵件：</label>
+                            <input type="email" class="form-control" id="email" name="email" placeholder="請輸入您的電子郵件" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">密碼：</label>
+                            <input type="password" class="form-control" id="password" name="password" placeholder="請輸入您的密碼" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">註冊</button>
+                    </form>
+
+                    <!-- Google 登入按鈕 -->
+                    <div class="text-center mt-3">
+                        <button class="btn btn-danger" onclick="handleGoogleLogin()">使用 Google 註冊</button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="email">電子郵件：</label>
-                <input type="email" class="form-control" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">密碼：</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-success btn-block">註冊</button>
-        </form>
-        <div class="google-login text-center mt-3">
-            <button class="btn btn-danger" onclick="handleGoogleLogin()">使用 Google 註冊</button>
         </div>
     </div>
 
