--- a/profile.html
+++ b/profile.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="map.html">山林導航</a>
+                    <a class="nav-link" href="./map.html">山林導航</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="account-settings.html">帳號設定</a>
+                    <a class="nav-link" href="./accountSettings.html">帳號設定</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">聯絡我們</a>
+                    <a class="nav-link" href="./contact.html">聯絡我們</a>
                 </li>
             </ul>
             <button class="btn btn-outline-danger my-2 my-sm-0" id="logoutButton">登出</button>
