--- a/accountSettings.html
+++ b/accountSettings.html
@@ -12,7 +12,7 @@
     <script type="module" src="./db/firebase-config.js"></script>
     <script type="module" src="./db/firebase-sync.js"></script>
     <script src="./db/gomtDB.js"></script>
-    <script src="./javascrips/accountSettings.js"></script>
+    <script type="module" src="./javascrips/accountSettings.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,17 +38,23 @@
         <h2 class="text-center">帳號設定</h2>
         <form class="mt-4">
             <div class="form-group">
+                <label for="name">姓名：</label>
+                <input type="text" class="form-control" id="name" required>
+            </div>
+            <div class="form-group">
                 <label for="email">電子郵件：</label>
                 <input type="email" class="form-control" id="email" required>
             </div>
             <div class="form-group">
-                <label for="password">新密碼：</label>
-                <input type="password" class="form-control" id="password" required>
+                <label for="newPassword">新密碼：</label>
+                <input type="password" class="form-control" id="newPassword" required>
+            </div>
+            <div class="form-group">
+                <label for="confirmPassword">確認密碼：</label>
+                <input type="password" class="form-control" id="confirmPassword" required>
             </div>
             <button type="submit" class="btn btn-primary btn-block">更新帳號資訊</button>
         </form>
     </div>
-
-    
 </body>
 </html>
