--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="./javascrips/contact.js"></script>
+    <script type="module" src="./javascrips/contact.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,7 +33,7 @@
 
     <div class="container mt-5">
         <h2 class="text-center">聯絡我們</h2>
-        <form class="mt-4">
+        <form id="contactForm"   class="mt-4">
             <div class="form-group">
                 <label for="name">姓名：</label>
                 <input type="text" class="form-control" id="name" required>
